--- a/app/src/main/res/layout/fragment_home_tab.xml
+++ b/app/src/main/res/layout/fragment_home_tab.xml
@@ -23,7 +23,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shape"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/tabIndicatorColor"
             app:tabIndicatorHeight="2dp"
