--- a/app/src/main/res/layout/fragment_list_queue_team.xml
+++ b/app/src/main/res/layout/fragment_list_queue_team.xml
@@ -9,6 +9,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,7 +17,7 @@
             android:id="@+id/viewWait"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#d1e0e0"
+            android:background="@color/white"
             android:orientation="vertical">
 
             <LinearLayout
@@ -36,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:background="@drawable/buttonstyle"
+                    android:background="@drawable/shape"
                     android:paddingLeft="20dp"
                     android:paddingRight="20dp"
                     android:text="Join Game"
