--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,5 +1,36 @@
-<vector android:height="24dp" android:tint="#FFFFFF"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <path
+      android:pathData="M256,256m-256,0a256,256 0,1 1,512 0a256,256 0,1 1,-512 0"
+      android:fillColor="#fedd55"/>
+  <path
+      android:pathData="m512,256c0,-28.549 -4.678,-56.004 -13.302,-81.647l-80.334,-80.334 -324.728,324.727 79.776,79.634c25.912,8.826 53.69,13.62 82.588,13.62 141.385,0 256,-114.615 256,-256z"
+      android:fillColor="#fcc63d"/>
+  <path
+      android:pathData="M319.667,192.716m-104.011,0a104.011,104.011 0,1 1,208.022 0a104.011,104.011 0,1 1,-208.022 0"
+      android:fillColor="#5eefee"/>
+  <path
+      android:pathData="m393.216,266.259c-40.623,40.623 -106.483,40.623 -147.099,0.007l147.099,-147.099c40.616,40.616 40.616,106.476 0,147.092z"
+      android:fillColor="#54c9fc"/>
+  <path
+      android:pathData="m208.409,253.029l50.904,50.904l-87.642,87.642l-50.904,-50.904z"
+      android:fillColor="#ff807d"/>
+  <path
+      android:pathData="m146.146,366.169l87.647,-87.647l25.452,25.452l-87.647,87.647z"
+      android:fillColor="#fc3e53"/>
+  <path
+      android:pathData="m220.97,291.413c-54.422,-54.422 -54.422,-142.973 0,-197.394 54.422,-54.422 142.973,-54.422 197.395,0s54.422,142.973 0,197.395c-54.423,54.421 -142.974,54.421 -197.395,-0.001zM383.009,129.374c-34.927,-34.927 -91.757,-34.927 -126.684,0s-34.927,91.756 0,126.684 91.757,34.927 126.684,0c34.926,-34.927 34.927,-91.757 0,-126.684z"
+      android:fillColor="#776d6b"/>
+  <path
+      android:pathData="m418.361,94.022 l-35.355,35.355c34.924,34.924 34.931,91.754 0.007,126.678 -34.931,34.931 -91.761,34.924 -126.685,0l-35.355,35.355c8.796,8.796 18.491,16.172 28.786,22.125 53.372,30.872 122.98,23.504 168.61,-22.125 54.418,-54.418 54.411,-142.969 -0.008,-197.388z"
+      android:fillColor="#57555c"/>
+  <path
+      android:pathData="m93.636,418.746c-14.059,-14.059 -14.059,-36.853 0,-50.912l29.699,-29.699 50.912,50.912 -29.699,29.698c-14.059,14.06 -36.853,14.06 -50.912,0.001z"
+      android:fillColor="#776d6b"/>
+  <path
+      android:pathData="m174.246,389.048 l-29.698,29.698c-14.057,14.057 -36.854,14.057 -50.912,0l55.154,-55.154z"
+      android:fillColor="#57555c"/>
 </vector>
