--- a/app/src/main/res/layout/aaaa.xml
+++ b/app/src/main/res/layout/aaaa.xml
@@ -170,6 +170,7 @@
                             android:paddingTop="5dp">
 
                             <TextView
+                                android:drawableStart="@drawable/address_icon"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
@@ -184,7 +185,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="2"
                                 android:padding="5dp"
-                                android:text=""
+                                android:gravity="right"
+                                android:text="123 Cm"
                                 android:textSize="14sp"
                                 android:textStyle="bold" />
 
