--- a/app/src/main/res/layout/activity_email_registration.xml
+++ b/app/src/main/res/layout/activity_email_registration.xml
@@ -1,179 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
-        <import type="android.view.View" />
 
     </data>
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     >
+
+    >
 
     <ImageView
-        android:layout_width="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_above="@+id/ll"
+        android:layout_width="250dp"
         android:layout_height="match_parent"
-        android:src="@drawable/login_background"
-        android:scaleType="centerCrop"/>
+        android:src="@drawable/icon_app"
+        />
 
     <LinearLayout
+        android:id="@+id/ll"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/txtEmail"
 
-        <LinearLayout
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
+            android:paddingLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="56dp">
+            android:layout_height="50dp"
+            android:hint="Email"
+            android:background="@drawable/shape2"
+            />
 
-
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="20dp"
-                android:layout_height="32dp"
-                android:src="@drawable/back"
-                android:scaleType="centerCrop"
-                android:layout_marginLeft="16dp"/>
-
-
-            <TextView
-                android:gravity="right"
-                android:layout_marginRight="12dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Registration"
-                android:textSize="24sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:orientation="vertical"
+        <EditText
+            android:id="@+id/txtPassword"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/black"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="50dp"
+            android:hint="Mật khẩu"
+            android:background="@drawable/shape2"
+            />
+        <EditText
+            android:id="@+id/password2"
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="nhập lại mật khẩu"
+            android:background="@drawable/shape2"
+            />
+        <Button
+            android:id="@+id/register"
+            android:background="@drawable/shape"
+            android:textSize="20sp"
+            android:textAllCaps="false"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text= "Tạo tài khoảng"/>
 
-            <LinearLayout
-                android:gravity="center_vertical"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:background="@drawable/ic_baseline_email_24_yeallow"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    />
-
-                <EditText
-                    android:id="@+id/txtEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="12dp"
-                    android:background="@null"
-                    android:hint="Email"
-                    android:inputType="textEmailAddress"
-                    android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/white"/>
-
-
-            <LinearLayout
-                android:layout_marginTop="16dp"
-                android:gravity="center_vertical"
-                android:layout_marginRight="40dp"
-                android:layout_marginLeft="40dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:background="@drawable/ic_baseline_email_24_yeallow"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                 />
-
-                <EditText
-                    android:id="@+id/txtPassword"
-                    android:inputType="textPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@null"
-                    android:textStyle="bold"
-                    android:hint="Password"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="12dp"/>
-
-            </LinearLayout>
-
-
-
-
-            <Button
-                android:id="@+id/register"
-                android:paddingRight="40dp"
-                android:paddingLeft="40dp"
-                android:textColor="@color/white"
-                android:background="@drawable/buttonstyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Registration"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp"/>
-
-
-            <LinearLayout
-                android:layout_marginTop="40dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:textColor="@color/white"
-                    android:gravity="right"
-                    android:text="Allready have an accout? "
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.9"/>
-
-                <TextView
-                    android:id="@+id/login"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:text="Login"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-
+        <TextView
+            android:layout_gravity="center"
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="30dp"
+            android:text="Quay về trang đăng nhập"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
     </LinearLayout>
+
 
 
 </RelativeLayout>
