--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -96,7 +96,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="40dp"
-                android:background="@drawable/buttonstyle"
+                android:background="@drawable/shape"
                 android:paddingLeft="80dp"
                 android:paddingRight="80dp"
                 android:text="Next"
