--- a/app/src/main/res/layout/fragment_edit_player_contact_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_contact_.xml
@@ -13,7 +13,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shape"
             android:layout_height="?attr/actionBarSize">
             <LinearLayout
                 android:layout_width="match_parent"
