--- a/app/src/main/res/layout/fragment_edit_player_infor_.xml
+++ b/app/src/main/res/layout/fragment_edit_player_infor_.xml
@@ -15,7 +15,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/shape"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
