--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,7 +7,7 @@
 
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-       android:background="#d1e0e0"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -24,18 +24,30 @@
                     android:orientation="vertical">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                       <TextView
-                         android:drawableStart="@drawable/seach_icon"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"></TextView>
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:background="@drawable/shape"
+                        >
 
                         <EditText
-                            android:id="@+id/txtName"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="input name "/>
+                            android:drawablePadding="10dp"
+                            android:paddingLeft="10dp"
+                            android:paddingRight="10dp"
+                            android:layout_gravity="center"
+                            android:id="@+id/search"
+                            android:background="@drawable/shape2"
+                            android:layout_width="fill_parent"
+                            android:layout_height="42dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginLeft="10dp"
+                            android:drawableLeft="@drawable/ic_search"
+                            android:drawableRight="@drawable/ic_stars"
+                            android:hint="Seach"
+
+
+                            ></EditText>
+
+
                     </LinearLayout>
 
 
