--- a/app/src/main/res/layout/fragment_list_callendar.xml
+++ b/app/src/main/res/layout/fragment_list_callendar.xml
@@ -8,12 +8,14 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#d1e0e0">
+        >
 
 
         <LinearLayout
+            android:background="@drawable/shape"
             android:padding="10dp"
             android:id="@+id/selectDate"
             android:layout_width="match_parent"
@@ -21,18 +23,21 @@
             app:layout_constraintTop_toTopOf="parent"
             android:orientation="vertical">
             <LinearLayout
+
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
-                    android:textStyle="bold"
-                    android:textSize="20dp"
-                    android:layout_weight="1"
                     android:id="@+id/txtCallendar"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:hint="callendar " />
+                    android:hint="callendar "
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/btnCallendar"
                     android:layout_width="wrap_content"
@@ -52,17 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
-
-        <!--                    android:adapter="@{viewModel.adapter}"-->
-
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnCreateMatch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_white_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/loading_layout"
