--- a/app/src/main/res/layout/fragment_list_comment.xml
+++ b/app/src/main/res/layout/fragment_list_comment.xml
@@ -9,9 +9,10 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#d1e0e0"
+
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
