--- a/app/src/main/res/layout/fragment_main_field.xml
+++ b/app/src/main/res/layout/fragment_main_field.xml
@@ -6,35 +6,16 @@
         <import type="android.view.View" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:textColor="@color/white"
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                    android:text="List Field"
-                android:gravity="center_vertical"
-                android:textSize="20dp"
-                android:layout_weight="1"/>
-
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
-
     <com.google.android.material.tabs.TabLayout
+        android:background="@drawable/shape"
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
+        app:layout_constraintTop_toTopOf="parent"
+     />
 <!--    adapter dau-->
 
     <androidx.viewpager.widget.ViewPager
