--- a/app/src/main/res/layout/fragment_main_information_match.xml
+++ b/app/src/main/res/layout/fragment_main_information_match.xml
@@ -19,7 +19,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shape"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
