--- a/app/src/main/res/layout/fragment_main_match.xml
+++ b/app/src/main/res/layout/fragment_main_match.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/shape"
         android:layout_height="?attr/actionBarSize"
         app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
@@ -31,6 +31,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <com.google.android.material.tabs.TabLayout
+
         android:id="@+id/tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
