--- a/app/src/main/res/layout/fragment_profile_field.xml
+++ b/app/src/main/res/layout/fragment_profile_field.xml
@@ -17,7 +17,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shape"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -168,7 +168,7 @@
                             android:paddingRight="20dp"
                             android:paddingLeft="20dp"
                             android:textColor="@color/white"
-                            android:background="@drawable/buttonstyle"
+                            android:background="@drawable/shape"
                             android:id="@+id/btnBooking"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
