--- a/app/src/main/res/layout/fragment_profile_player.xml
+++ b/app/src/main/res/layout/fragment_profile_player.xml
@@ -14,7 +14,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/shape"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent">
             <LinearLayout
@@ -110,7 +110,7 @@
                                 android:paddingRight="20dp"
                                 android:paddingLeft="20dp"
                                 android:textColor="@color/white"
-                                android:background="@drawable/buttonstyle"
+                                android:background="@drawable/shape"
                                 android:id="@+id/btnInvite"
                                 android:text="Invite to Team"
                                 android:layout_width="wrap_content"
@@ -121,7 +121,7 @@
                                 android:paddingRight="20dp"
                                 android:paddingLeft="20dp"
                                 android:textColor="@color/white"
-                                android:background="@drawable/buttonstyle"
+                                android:background="@drawable/shape"
 
                                 android:id="@+id/btnDecline"
                                 android:text="Decline Team"
@@ -133,7 +133,7 @@
                                 android:paddingRight="20dp"
                                 android:paddingLeft="20dp"
                                 android:textColor="@color/white"
-                                android:background="@drawable/buttonstyle"
+                                android:background="@drawable/shape"
                                 android:id="@+id/btnAccept"
                                 android:text="Accept to Team "
                                 app:layout_constraintLeft_toLeftOf="parent"
