--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008000</color>008000
-    <color name="colorPrimaryDark">#003300</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#F44336</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#ffffff</color>
     <color name="colorBG">#e6f9ff</color>
@@ -10,5 +10,28 @@
     <color name="tabTextColor">#ffffff</color>
     <color name="tabSelectedTextColor">#ffffff</color>
     <color name="tabIndicatorColor">#ffffff</color>
+    <color name="colorGradient">#FAC44E</color>
+
+    <color name="colorGradientStart">#4c84ff</color>
+    <color name="colorGradientEnd">#FF9800</color>
+    <color name="colorGradientEnde">#F44336</color>
+
+
+    <!--colors for light mode-->
+    <color name="contentBodyColor">#FCFCFC</color>
+    <color name="contentTextColor">#020000</color>
+    <color name="imageBorderColor">#E01E7A</color>
+    <color name="miniTitle">#2A2E43</color>
+
+    <color name="black">#000</color>
+    <color name="red">#D52126</color>
+
+
+    <!--Button style-->
+
+    <!--Tab and screen text-->
+    <color name="colorTabIndicator">#c0c0c0</color>
+    <color name="colorIntroTitle">#000000</color>
+    <color name="colorIntroDescription">#656565</color>
 
 </resources>
