--- a/app/src/main/res/layout/item_time_horizontal.xml
+++ b/app/src/main/res/layout/item_time_horizontal.xml
@@ -12,7 +12,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:contentPadding="5dp"
         android:layout_marginHorizontal="10dp"
