--- a/app/src/main/res/layout/item_player_horizontal.xml
+++ b/app/src/main/res/layout/item_player_horizontal.xml
@@ -11,7 +11,7 @@
     </data>
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:contentPadding="10dp"
         android:layout_margin="5dp"
