--- a/app/src/main/res/layout/fragment_profile_my_team.xml
+++ b/app/src/main/res/layout/fragment_profile_my_team.xml
@@ -254,6 +254,9 @@
                         android:id="@+id/recycleViewListEvaluateVertical"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"></TextView>
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
