--- a/app/src/main/res/layout/fragment_profile_other_team.xml
+++ b/app/src/main/res/layout/fragment_profile_other_team.xml
@@ -278,6 +278,10 @@
                             android:layout_height="match_parent"/>
 
                     </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"></TextView>
+
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
