--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -30,12 +30,13 @@
                         >
 
                         <EditText
+
                             android:layout_weight="1"
                             android:drawablePadding="10dp"
                             android:paddingLeft="10dp"
                             android:paddingRight="10dp"
                             android:layout_gravity="center"
-                            android:id="@+id/txtsearch"
+                            android:id="@+id/txtSearch"
                             android:background="@drawable/shape2"
                             android:layout_width="wrap_content"
                             android:layout_height="42dp"
@@ -46,7 +47,7 @@
 
                             ></EditText>
                        <ImageView
-
+                           android:id="@+id/btnSearch"
                            android:src="@drawable/ic_search"
                            android:layout_width="40dp"
                            android:layout_height="match_parent">
