--- a/app/src/main/res/layout/fragment_list_callendar.xml
+++ b/app/src/main/res/layout/fragment_list_callendar.xml
@@ -29,21 +29,42 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:text="date"
+                    android:text="12/12/2020"
                     android:textColor="@color/white"
-                    android:id="@+id/txtCallendar"
+                    android:id="@+id/dateStart"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="20dp"
                     android:textStyle="bold" />
-
+                \
                 <TextView
-                    android:id="@+id/btnCallendar"
+                    android:textSize="20dp"
+                    android:textColor="@color/white"
+                    android:text=" --"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableStart="@drawable/calendar"></TextView>
+                    ></TextView>
+                <TextView
+                    android:text="14/12/2020"
+                    android:textColor="@color/white"
+                    android:id="@+id/dateEnd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:drawableEnd="@drawable/seach_icon"
+                    android:id="@+id/searchDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                 />
+
+
             </LinearLayout>
 
 
