--- a/app/src/main/res/layout/fragment_match_information.xml
+++ b/app/src/main/res/layout/fragment_match_information.xml
@@ -30,12 +30,15 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/txtTime"
                 android:layout_margin="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableStart="@drawable/time_icon"
-                android:drawablePadding="5dp"
-                android:text="@{match.idBooking.date +`,`+match.idBooking.idTimeGame.startTime+ `-`+match.idBooking.idTimeGame.endTime}"></TextView>
+                android:drawablePadding="5dp">
+
+
+            </TextView>
 
             <TextView
                 android:layout_margin="5dp"
