--- a/app/src/main/res/layout/fragment_profile_field.xml
+++ b/app/src/main/res/layout/fragment_profile_field.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="field"
+            name="team"
             type="com.example.myclub.model.Field" />
     </data>
-
-
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:orientation="vertical"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white">
+        >
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -20,7 +21,6 @@
             android:background="@drawable/toolbar_color"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
@@ -29,20 +29,10 @@
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Thông tin sân bóng "
                     android:gravity="center_vertical"
                     android:textSize="20dp"
+                    android:text="Hồ sơ sân bóng"
                     android:textColor="@color/white"/>
-
-
-                <ImageButton
-                    android:id="@+id/btnEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingHorizontal="15dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:src="@drawable/email_icon"
-                   />
                 <ImageButton
                     android:id="@+id/btnCall"
                     android:layout_width="wrap_content"
@@ -50,140 +40,221 @@
                     android:paddingHorizontal="15dp"
                     android:background="?android:attr/selectableItemBackground"
                     android:src="@drawable/ic_baseline_phone_24_green"/>
+                <ImageButton
+                    android:id="@+id/btnEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="15dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:src="@drawable/email_icon"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ScrollView
+            android:paddingTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
-            android:layout_height="0dp">
-
-            <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/mainView"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                app:cardCornerRadius="20dp">
+                android:layout_height="wrap_content">
+
+                <androidx.cardview.widget.CardView
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/previewInfor"
+                    android:layout_width ="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:cardCornerRadius="20dp">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/inforReview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <ImageView
+                            android:id="@+id/cover"
+                            android:layout_width="match_parent"
+                            android:layout_height="160dp"
+                            android:src="@drawable/cover_default"
+                            android:scaleType="fitXY"
+
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/avatar"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:src="@drawable/field"
+                            app:civ_border_color="#ffffff"
+                            app:civ_border_width="2dp"
+                            app:layout_constraintBottom_toBottomOf="@id/cover"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/cover" />
+                        <TextView
+                            android:textStyle="bold"
+                            android:textSize="25dp"
+                            android:gravity="center"
+                            android:id="@+id/lblName"
+                            android:text="@{team.name}"
+                            app:layout_constraintTop_toBottomOf="@id/avatar"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:layout_height="30dp"
+                            android:layout_width="0dp"></TextView>
+                        <LinearLayout
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:orientation="horizontal"
+                            android:layout_marginHorizontal="20dp"
+                            app:layout_constraintTop_toBottomOf="@id/lblName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:paddingHorizontal="10dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/level_icon"
+                                android:text="Basic"
+                                android:textStyle="bold"></TextView>
+                            <TextView
+                                android:paddingHorizontal="10dp"
+                                android:text="100"
+                                android:textStyle="bold"
+                                android:drawableStart="@drawable/reputation"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                ></TextView>
+
+                            <TextView
+                                android:paddingHorizontal="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/rating_icon"
+                                android:text="8.8"
+                                android:textStyle="bold"></TextView>
+                        </LinearLayout>
+
+
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+                <LinearLayout
+                    android:layout_gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+                    <Button
+                        android:paddingRight="20dp"
+                        android:paddingLeft="20dp"
+                        android:textColor="@color/white"
+                        android:background="@drawable/shape"
+                        android:text="Đặt sân"
+                        android:textAllCaps="false"
+                        android:id="@+id/btnBooking"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"></Button>
+                </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:padding="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/cover"
+                    android:layout_height="wrap_content">
+                    <androidx.cardview.widget.CardView
+                        android:background="@color/white"
+                        app:cardCornerRadius="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
                         android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/cover_default"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/avatar"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:src="@drawable/field"
-                        app:civ_border_color="#ffffff"
-                        app:civ_border_width="2dp"
-                        app:layout_constraintBottom_toBottomOf="@id/cover"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/cover" />
-
-                    <TextView
-                        android:hint="Name"
-                        android:id="@+id/lblName"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/avatar"
-                        android:text="@{field.name}"
-                        android:textSize="30dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"></TextView>
-                    <LinearLayout
-                        app:layout_constraintTop_toBottomOf="@+id/lblName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:paddingHorizontal="20dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Thông tin cơ bản"
-                            android:textSize="20dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/ic_baseline_phone_24_green"
-                            android:padding="5dp"
-                            android:text="@{field.name}"
-                            android:textSize="16dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/email_icon"
-                            android:padding="5dp"
-                            android:text="@{field.email}"
-                            android:textSize="16dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:drawableStart="@drawable/address_icon"
-                            android:padding="5dp"
-                            android:text="@{field.address}"
-                            android:textSize="16dp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Lời giới thiệu"
-                            android:textSize="20dp"
-                            android:textStyle="bold" />
-
-                        <TextView
+                        android:layout_height="match_parent">
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:padding="5dp"
-                            android:text="@{field.introduce}"
-                            android:textSize="16dp" />
+                            android:layout_height="match_parent"
+                            android:layout_gravity=""
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:paddingHorizontal="20dp"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Thông tin liên lạc"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/ic_baseline_phone_24_green"
+                                android:padding="5dp"
+                                android:text="@{team.phone}"
+                                android:textSize="16dp"
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Khung giờ"
-                            android:textSize="20dp"
-                            android:textStyle="bold" />
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recycleViewListTimeVertical"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"/>
-                        <!--                    android:adapter="@{viewModel.adapter}"-->
-                        <Button
-                            android:layout_gravity="center"
-                            android:paddingRight="20dp"
-                            android:paddingLeft="20dp"
-                            android:textColor="@color/white"
-                            android:background="@drawable/shape"
-                            android:id="@+id/btnBooking"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Đặt sân"
-                            ></Button>
+                                />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/email_icon"
+                                android:padding="5dp"
+                                android:text="@{team.email}"
+                                android:textSize="16dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:drawableStart="@drawable/address_icon"
+                                android:padding="5dp"
+                                android:text="@{team.address}"
+                                android:textSize="16dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Lời giới thiệu"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="5dp"
+                                android:text="@{team.introduce}"
+                                android:textSize="16dp" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Danh sách khung giờ"
+                                android:textSize="20dp"
+                                android:textStyle="bold" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+
+                                android:padding="10dp"
+                                android:id="@+id/recycleViewListPlayerVertical"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"></TextView>
 
 
 
-                    </LinearLayout>
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
+        </ScrollView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -203,5 +274,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
